Bug 510590 - Marble's flatpak package doesn't install marble_geo and marble_worldwind desktop files
Summary: Marble's flatpak package doesn't install marble_geo and marble_worldwind desk...
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: NixOS Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-14 09:41 UTC by Ilya Fedin
Modified: 2025-10-28 23:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ilya Fedin 2025-10-14 09:41:17 UTC
SUMMARY
This makes it unable to handle geo:// and worldwind:// accordingly.

STEPS TO REPRODUCE
1. Install Marble's flatpak package

OBSERVED RESULT
The .desktop files aren't installed

EXPECTED RESULT
The .desktop files are installed

SOFTWARE/OS VERSIONS
Operating System: NixOS 25.11
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.17.0-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 32 × AMD Ryzen 9 5950X 16-Core Processor
Memory: 64 ГиБ of RAM (62.7 ГиБ usable)
Graphics Processor: AMD Radeon RX 6400
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7C94
System Version: 1.0

ADDITIONAL INFORMATION
I see two possible fixes:
1. Rename them to org.kde.marble.geo.desktop and org.kde.marble.worldwind.desktop accordingly
2. Get rid of them and just handle everything via org.kde.marble.desktop

Personally I like the second option more.
Comment 1 Bug Janitor Service 2025-10-14 10:11:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/marble/-/merge_requests/179
Comment 2 Ilya Fedin 2025-10-28 23:57:51 UTC
Git commit c067ef67ddb50b8d63002fd8519f0a6bd349759f by Ilya Fedin.
Committed on 21/10/2025 at 19:25.
Pushed by aacid into branch 'master'.

Handle geo URLs as positional arguments

This allows the main .desktop file (and thus flatpak package) to handle URLs

M  +0    -3    src/apps/marble-kde/CMakeLists.txt
M  +14   -5    src/apps/marble-kde/kdemain.cpp
D  +0    -66   src/apps/marble-kde/marble_geo.desktop
D  +0    -66   src/apps/marble-kde/marble_worldwind.desktop
M  +2    -1    src/apps/marble-kde/org.kde.marble.desktop

https://invent.kde.org/education/marble/-/commit/c067ef67ddb50b8d63002fd8519f0a6bd349759f