Handle geo URLs as positional arguments

This allows the main .desktop file (and thus flatpak package) to handle URLs

BUG: 510590